<resources>
    <string name="app_name">Smart Parking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splashscreen_text">Parkir nyaman dan aman!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="tidak_punya_akun">Tidak punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="email">Email</string>
    <string name="no_hp">No. HP</string>
    <string name="registrasi_sukses">Registrasi berhasil!</string>
    <string name="registrasi_gagal">Registrasi gagal!</string>
    <string name="login_sukses">Login berhasil!</string>
    <string name="login_gagal">Login gagal!</string>

    <string-array name="jenis_kelamin">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="id_keluarga">ID Keluarga</string>
    <string name="alamat">Alamat</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="news">News</string>
    <string name="home">Home</string>
    <string name="market">Market</string>
    <string name="akun">Akun</string>
    <string name="saldo">Saldo</string>
    <string name="top_up">Top Up</string>
    <string name="kirim">Kirim</string>
    <string name="minta">Minta</string>
    <string name="informasi">Informasi</string>
    <string name="persuratan">Persuratan</string>
    <string name="laporan">Laporan</string>
    <string name="keluarga">+Keluarga</string>
    <string name="kegiatan_warga">Kegiatan Warga</string>
    <string name="info_terkini">Info Terkini</string>
    <string name="kode_rt">Kode RT</string>
    <string name="kode_keluarga">Kode Keluarga</string>
    <string name="lainnya">Lainnya</string>
    <string name="pengurus">Pengurus</string>
    <string name="warga">Warga</string>
    <string name="saldo_toko">Saldo Toko</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="add_keluarga">+Keluarga</string>

</resources>