<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/toolbar">

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintLeft_toLeftOf="@+id/view2"
        app:layout_constraintRight_toRightOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2">

        <Button
            android:id="@+id/btn_toolbar_home"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_toolbar_icon_home"
            android:fontFamily="@font/poppins"
            android:text="@string/home"
            android:textColor="@color/grey_2"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn_toolbar_news"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_toolbar_icon_news"
            android:fontFamily="@font/poppins"
            android:text="@string/news"
            android:textColor="@color/grey_2"
            android:textSize="10sp" />

        <Button
            android:id="@+id/support_btn_toolbar_main"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button"
            android:drawableTop="@drawable/ic_toolbar_icon_news"
            android:text="@string/news"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btn_toolbar_market"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_toolbar_icon_market"
            android:fontFamily="@font/poppins"
            android:text="@string/market"
            android:textColor="@color/grey_2"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btn_toolbar_profile"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_toolbar_icon_user"
            android:fontFamily="@font/poppins"
            android:text="@string/akun"
            android:textColor="@color/grey_2"
            android:textSize="10sp" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_toolbar_main"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/round_button"
        android:drawableTop="@drawable/ic_toolbar_icon_news"
        android:text="@string/news"
        android:textSize="10sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>